test/files/invalid/empty_struct.stderr
error: Empty structs are not supported
  ┌─ test/files/invalid/empty_struct.fbs:1:1
  │
1 │ struct X {}
  │ ^^^^^^^^

